form components added in add company page

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -28482,21 +28482,21 @@
     box-shadow: 0 0 0 .2rem rgba(34,198,171,.25);
   }
   
-  .invalid-feedback {
-    display: none;
-    width: 100%;
-    margin-top: .25rem;
-    font-size: 80%;
-    color: #ff0000;
-  }
+  // .invalid-feedback {
+  //   display: none;
+  //   width: 100%;
+  //   margin-top: .25rem;
+  //   font-size: 80%;
+  //   color: #ff0000;
+  // }
   
-  .invalid-tooltip {
-    display: none;
-    margin-top: .1rem;
-    font-size: .875rem;
-    color: #fff;
-    background-color: rgba(239,110,110,.8);
-  }
+  // .invalid-tooltip {
+  //   display: none;
+  //   margin-top: .1rem;
+  //   font-size: .875rem;
+  //   color: #fff;
+  //   background-color: rgba(239,110,110,.8);
+  // }
   
   .collapsing,.dropdown,.dropleft,.dropright,.dropup {
     position: relative;
