1. added axios 2. fixed context code

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -41028,7 +41028,7 @@
     padding: 10px 20px;
     background: #343a40;
     color: #fff;
-    ext-align: center;
+    text-align: center;
     z-index: 1;
     -webkit-transition: opacity .2s linear;
     -moz-transition: opacity .2s linear;
