--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -28820,7 +28820,7 @@ pre code {
 
 table.dataTable thead {
   background-color: #000;
-  color: #fff;
+  color: #fff !important;
 }
 
 .table tbody+tbody {
