--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -10,3 +10,10 @@
   font-weight: bold;
   text-decoration: underline;
 }
+hr {
+  box-sizing: content-box;
+  height: 0;
+  margin-top: 1rem;
+  border: 0.5px solid black;
+  border-top: 1px solid rgba(0,0,0,.1);
+}
