Price Group Master

--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -17,3 +17,8 @@ hr {
   border: 0.5px solid black;
   border-top: 1px solid rgba(0,0,0,.1);
 }
+
+.text-red-custom {
+  color: red;
+  font-size: 15px;
+}
