--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -15,10 +15,14 @@ hr {
   height: 0;
   margin-top: 1rem;
   border: 0.5px solid black;
-  border-top: 1px solid rgba(0,0,0,.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .text-red-custom {
   color: red;
   font-size: 15px;
+}
+
+.loader-wrapper {
+  justify-content: center;
 }
