--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -6,9 +6,11 @@
   color: inherit;
 }
 .card-title {
-  color: #ef6e6e;
-  font-weight: bold;
-  text-decoration: underline;
+  // color: #ef6e6e;
+  // font-weight: bold;
+  // text-decoration: underline;
+  color:#b50000; font-weight:bold; text-decoration: underline,
+
 }
 hr {
   box-sizing: content-box;
@@ -26,4 +28,8 @@ hr {
 .loader-wrapper {
   margin: 15px 0;
   justify-content: center;
+}
+
+.enquirynote{
+  background-color: #000;
 }
