--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -44866,6 +44866,7 @@ fieldset.scheduler-border {
   /* margin: 0 0 1.5em 0 !important;*/
   -webkit-box-shadow: 0px 0px 0px 0px #000;
   box-shadow: 0px 0px 0px 0px #000;
+  position: relative;
 }
 
 legend.scheduler-border {
