--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -47,3 +47,8 @@ hr {
   content: " *";
   color: red; /* You can choose your preferred color for the asterisk */
 }
+
+.custom-checkbox {
+  font-size: 20px; /* Increase font size */
+  color: red;     /* Change the text color */
+}
