--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -25,6 +25,30 @@ hr {
   color: red;
   font-size: 15px;
 }
+.text-red-custom1 {
+  color: red;
+  // font-size: 20px;
+  border-bottom: 2px solid red;
+  width: 150px;
+  font-weight: bold;
+
+}
+.text-red-custom2 {
+  color: red;
+  // font-size: 20px;
+  border-bottom: 2px solid red;
+  width: 240px;
+  font-weight: bold;
+
+}
+.text-red-custom3 {
+  color: red;
+  // font-size: 20px;
+  border-bottom: 2px solid red;
+  width: 280px;
+  font-weight: bold;
+
+}
 
 .loader-wrapper {
   display: flex;
