--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -51,5 +51,10 @@ hr {
 
 .custom-checkbox {
   font-size: 20px; /* Increase font size */
-  color: red;     /* Change the text color */
+  color: red; /* Change the text color */
+}
+
+.editable-cell-style {
+  background-color: transparent;
+  border: none;
 }
