bugs fixes in company, client and price list for client

--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -58,3 +58,10 @@ hr {
   background-color: transparent;
   border: none;
 }
+
+.custom-label {
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+  left: 30px;
+}
