--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -31,7 +31,6 @@ hr {
   border-bottom: 2px solid red;
   width: 150px;
   font-weight: bold;
-
 }
 .text-red-custom2 {
   color: red;
@@ -39,7 +38,6 @@ hr {
   border-bottom: 2px solid red;
   width: 240px;
   font-weight: bold;
-
 }
 .text-red-custom3 {
   color: red;
@@ -47,7 +45,6 @@ hr {
   border-bottom: 2px solid red;
   width: 280px;
   font-weight: bold;
-
 }
 
 .loader-wrapper {
@@ -73,10 +70,10 @@ hr {
   color: red; /* You can choose your preferred color for the asterisk */
 }
 
-.custom-checkbox {
-  font-size: 20px; /* Increase font size */
-  color: red; /* Change the text color */
-}
+// .custom-checkbox {
+//   font-size: 20px; /* Increase font size */
+//   color: red; /* Change the text color */
+// }
 
 .editable-cell-style {
   background-color: transparent;
