Invoices Generate Invoices GST ReDesign

--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -49,10 +49,10 @@ hr {
   color: red; /* You can choose your preferred color for the asterisk */
 }
 
-.custom-checkbox {
-  font-size: 20px; /* Increase font size */
-  color: red; /* Change the text color */
-}
+// .custom-checkbox {
+//   font-size: 20px; /* Increase font size */
+//   color: red; /* Change the text color */
+// }
 
 .editable-cell-style {
   background-color: transparent;
