add new row table row and remove new table row and table cell edit functionality implemented

--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -65,3 +65,11 @@ hr {
   top: 0;
   left: 30px;
 }
+
+.addMoreBtn {
+  display: flex;
+  align-items: center;
+  span {
+    margin-left: 10px;
+  }
+}
