--- a/src/assets/css/custom-style.scss
+++ b/src/assets/css/custom-style.scss
@@ -28,7 +28,7 @@ hr {
 
 .loader-wrapper {
   display: flex;
-  position: relative;
+  position: absolute;
   z-index: 99;
   background: #f8f9fa75;
   width: 100%;
